--- a/sections/instagram-block.liquid
+++ b/sections/instagram-block.liquid
@@ -1,22 +1,10 @@
 <div class="instagram">
-  <div class="instagram__wrap">
-    <div class="instagram__intro">
-      <div class="instagram__intro__left">
-        <h3 class="colour--green">
-          <b>Life bits. Mum bits. Private bits. Your bits...</b>
-        </h3>
-      </div>
-      <div class="instagram__intro__right">
-        <h3 class="colour--green">
-          <b>follow us</b>
-        </h3>
-        <a href="#" class="instagram__intro__right__link">
-          <img src="{{ 'facebook-green.svg' | asset_url }}" loading="lazy" width="32" height="32">
-        </a>
-        <a href="#" class="instagram__intro__right__link">
-          <img src="{{ 'instagram-green.svg' | asset_url }}" loading="lazy" width="32" height="32">
-        </a>
-      </div>
-    </div>
+  <div class="instagram__intro">
+    <h3 class="no-margin">Follow us</h3>
+    <h2 class="no-margin"><b>Stay up to date with our latest news and promotions</b></h2>
+  </div>
+  <div class="instagram__feed">
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <div class="elfsight-app-8d6afa17-0e3e-45b9-9486-1ea08eefb4ed" data-elfsight-app-lazy></div>
   </div>
 </div>
