--- a/source/style.scss
+++ b/source/style.scss
@@ -46,3 +46,4 @@ Base includes
 @import 'sections/icon'; 
 @import 'sections/mega';  
 @import 'sections/password';  
+@import 'sections/quick-view';  
