--- a/source/sections/announcement.scss
+++ b/source/sections/announcement.scss
@@ -1,9 +1,8 @@
 .announcement {
     background: var(--green);
-   
 
     &-text {
-        margin: 0 auto 3rem;
+        margin: 0 auto;
         max-width: var(--inner-content-width);
         padding: 0.8rem 2rem 1rem;
 
