--- a/source/sections/footer.scss
+++ b/source/sections/footer.scss
@@ -41,10 +41,12 @@
         }
 
         &--1 {
-            width: 20%;
+            width: 40%;
+            padding-right: 3rem;
 
             @include media($lg, max) {
-                width: 33.33333%;
+                margin-top: 3rem;
+                width: 100%;
             }
 
             @include media($md, max) {
@@ -57,6 +59,7 @@
                 margin-bottom: 4rem;
             }
         }
+        
         &--2 {
             width: 20%;
 
@@ -74,6 +77,7 @@
                 margin-bottom: 4rem;
             }
         }
+
         &--3 {
             width: 20%;
 
@@ -91,12 +95,13 @@
                 margin-bottom: 4rem;
             }
         }
+
+
         &--4 {
-            width: 40%;
+            width: 20%;
 
             @include media($lg, max) {
-                margin-top: 3rem;
-                width: 100%;
+                width: 33.33333%;
             }
 
             @include media($md, max) {
