--- a/source/sections/header.scss
+++ b/source/sections/header.scss
@@ -1,10 +1,25 @@
+#shopify-section-header {
+    position: sticky;
+    top: 0;
+    z-index: 9;
+}
+
 .header {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
-    z-index: 9;
+    z-index: 9999;
     right: 0;
     transition: all $fast;
+    margin-bottom: -7.45rem;
+
+    @include media($lg, max) {
+        margin-bottom: -7.85rem;
+    }
+
+    @include media($md, max) {
+        margin-bottom: -11.85rem;
+    }
 
     &:after {
         @include pseudo;
@@ -15,25 +30,9 @@
     }
 
     &.nav-up {
-        transform: translateY(-2rem);
-        opacity: 0;
-
-        &:after {
-            opacity: 1;
-        }
-
-        @include media($lg, max) {
-            transform: translateY(-5rem);
-            opacity: 1;
-        }
-    }
-
-    &.nav-down {
-        transform: translateY(0);
-        opacity: 1;
-
-        .header-nav__item__link {
-            -webkit-text-fill-color: transparent !important;
+        background: #a6d3d8;
+        .header-logo svg {
+            transform: scale(0.8);
         }
     }
 
@@ -90,10 +89,10 @@
 
             &__link {
                 @include semi;
-                padding: 1.3rem 2rem 1.6rem;
+                padding: 1.15rem 1.5rem 1.4rem;
                 display: inline-block;
                 text-decoration: none;
-                font-size: 2rem;
+                font-size: 1.8rem;
 
                 &:before {
                     @include pseudo;
@@ -114,10 +113,13 @@
     &-logo {
         width: 20rem;
         margin-left: -16rem;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
 
         svg {
-            width: 9.5rem;
+            width: 7.5rem;
             height: auto;
+            transition: all $faster;
         }
 
         @include media($lg, max) {
@@ -138,7 +140,7 @@
         flex-wrap: wrap;
         justify-content: center;
         padding: 0 1rem;
-        height: 5.5rem;
+        height: 5.1rem;
 
         @include media($lg, max) {
             width: 16rem;
@@ -160,7 +162,7 @@
         &__navigation,
         &__search,
         &__cart {
-            padding: 1.5rem 1.3rem;
+            padding: 1.2rem 1.3rem;
             text-decoration: none;
             position: relative;
             z-index: 2;
@@ -178,7 +180,7 @@
             &__count {
                 position: absolute;
                 width: 1.6rem;
-                height: 1.6rem;
+                height: 1.4rem;
                 border-radius: 10000rem;
                 color: var(--green);
                 font-size: 1rem;
@@ -186,7 +188,7 @@
                 line-height: 1.2rem;
                 background: rgba(white, 1);
                 border-radius: 0.2rem;
-                top: 2.3rem;
+                top: 2rem;
                 right: 1.45rem;
                 height: 1.3rem;
                 transition: all $fast;
@@ -269,7 +271,7 @@
     }
 }
 
-[data-page-type='policy'] {
+[data-page-type="policy"] {
     .animate-white-to-green {
         background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.5) 50%, white 50%);
     }
