Updated the product slider Added in instagram

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -111,6 +111,15 @@
         cursor: -webkit-image-set(url({{ 'close.png' | asset_url }}) 1x,url({{ 'close@2x.png' | asset_url }}) 2x) 15 15,auto;
       }
 
+      .quickview-background{
+        cursor: -webkit-image-set(url({{ 'close.png' | asset_url }}) 1x,url({{ 'close@2x.png' | asset_url }}) 2x) 15 15,auto;
+        --p-size: {{ settings.p_size }}px;
+      }
+
+      .quickview-background{
+        cursor: -webkit-image-set(url({{ 'close.png' | asset_url }}) 1x,url({{ 'close@2x.png' | asset_url }}) 2x) 15 15,auto;
+      }
+
 
 
       *,
