--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -1,8 +1,22 @@
 <div class="banner banner--{{ section.settings.height }}">
   <div class="banner-image">
-    {%- if section.settings.image != blank -%}
-      {{ section.settings.image | image_url: width: 1640 | image_url: height: 760 | image_tag }}
-    {%- endif -%}
+    <picture>
+      <!-- Large screen image -->
+      <source srcset="{{ section.settings.image | image_url: width: 1920 | image_url: height: 967  }}" media="(min-width: 1280px)">
+
+      <!-- Large screen image -->
+      <source srcset="{{ section.settings.image | image_url: width: 1640 | image_url: height: 760  }}" media="(min-width: 1024px)">
+      
+      <!-- Medium screen image -->
+      <source srcset="{{ section.settings.image | image_url: width: 1640 | image_url: height: 760  }}" media="(min-width: 768px)">
+      
+      <!-- Small screen image -->
+      <source srcset="{{ section.settings.image | image_url: width: 1640 | image_url: height: 760  }}" media="(max-width: 767px)">
+      
+      <!-- Fallback image -->
+      <img src="{{ section.settings.image | image_url: width: 1640 | image_url: height: 760  }}" width="1640" height="760" alt="Responsive Image">
+    </picture>
+
   </div>
 
   <div class="banner-text">
