--- a/sections/main-collection-banner.liquid
+++ b/sections/main-collection-banner.liquid
@@ -14,3 +14,22 @@
     <div class="banner-collection-text-description">{{ collection.description }}</div>
   </div>
 </div>
+
+{% schema %}
+{
+  "name": "Collection Banner",
+  "settings": [
+    {
+      "type": "checkbox",
+      "id": "show_section",
+      "label": "Show simple text banner instead of collection banner",
+      "default": true
+    }
+  ],
+  "presets": [
+    {
+      "name": "Collection Banner"
+    }
+  ]
+}
+{% endschema %}
