Updated the text banner block

--- a/sections/text-banner.liquid
+++ b/sections/text-banner.liquid
@@ -12,7 +12,7 @@
 
 {% schema %}
 {
-  "name": "text-banner-block",
+  "name": "Text Banner Block",
   "class": "section",
   "tag": "section",
   "disabled_on": {
@@ -20,9 +20,9 @@
   },
   "settings": [
     {
-      "type": "richtext",
+      "type": "text",
       "id": "heading",
-      "default": "<p>Through lifes most <br>vital moments<\/p>",
+      "default": "Ceollection",
       "label": "Heading"
     },
     {
