--- a/sections/text-banner.liquid
+++ b/sections/text-banner.liquid
@@ -22,28 +22,8 @@
     {
       "type": "text",
       "id": "heading",
-      "default": "Ceollection",
+      "default": "Collection",
       "label": "Heading"
-    },
-    {
-      "type": "select",
-      "id": "height",
-      "label": "Banner height",
-      "options": [
-        {
-          "value": "slim",
-          "label": "Slim"
-        },
-        {
-          "value": "normal",
-          "label": "Normal"
-        },
-        {
-          "value": "tall",
-          "label": "Tall"
-        }
-      ],
-      "default": "normal"
     }
   ],
   "presets": [
